<resources>
    <string name="app_name">IceRock</string>
    <string name="sign_in">SIGN IN</string>
    <string name="personal_access_token">Personal access token</string>\
    <string name="invalid_token">Invalid token</string>

    <string name="something_error">Something error</string>
    <string name="check_your_something">Check your something</string>
    <string name="empty">Empty</string>
    <string name="no_repositories_at_the_moment">No repositories at the moment</string>
    <string name="connection_error">Connection Error</string>
    <string name="check_your_internet_connection">Check your Internet connection</string>
    <string name="repositories">Repositories</string>

    <string name="retry">Retry</string>
    <string name="no_readme">No README.md</string>
    <string name="license">License</string>
    <string name="stars">stars</string>
    <string name="forks">forks</string>
    <string name="watchers">watchers</string>
</resources>