<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.auth.AuthFragment"
    tools:ignore="contentDescription">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardAuth"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="17dp"
        app:cardBackgroundColor="@color/button_auth"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:theme="@style/StileOfProgressBar"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/textViewSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_in"
                android:textSize="14sp" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="127dp"
        android:layout_height="127dp"
        android:layout_marginTop="57dp"
        android:src="@drawable/ic_logosplash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="30dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewFloat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_access_token"
            android:textSize="12sp"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/textViewInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/personal_access_token"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewHelper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/invalid_token"
            android:textColor="@color/text_red"
            android:textSize="12sp"
            android:visibility="invisible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>